crates/swc_ecma_parser/tests/errors/missing_array_bracket/input.js
let arr = [1, 2, 3
let x = 1;
